--- a/config/corne.conf
+++ b/config/corne.conf
@@ -26,8 +26,8 @@ CONFIG_ZMK_DISPLAY=y
 # OLED Reverse "black on white" or "white on black" 
 CONFIG_SSD1306_REVERSE_MODE=y
 
-# Milliseconds of inactivity before entering idle state	(10 minute)
-CONFIG_ZMK_IDLE_TIMEOUT=600000
+# Milliseconds of inactivity before entering idle state	(15 seconds)
+CONFIG_ZMK_IDLE_TIMEOUT=15000
 
 # Enable deep sleep support	
 CONFIG_ZMK_SLEEP=y
