--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,7 +1,7 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
 CONFIG_ZMK_RGB_UNDERGLOW=y
 # Use the STRIP config specific to the LEDs you're using
-CONFIG_WS2812_STRIP=y
+CONFIG_WS2812_STRIP=n
 
 # Uncomment the following line to enable the Corne OLED Display
 CONFIG_ZMK_DISPLAY=y
@@ -26,8 +26,8 @@ CONFIG_ZMK_DISPLAY=y
 # OLED Reverse "black on white" or "white on black" 
 CONFIG_SSD1306_REVERSE_MODE=y
 
-# Milliseconds of inactivity before entering idle state	(15 seconds)
-CONFIG_ZMK_IDLE_TIMEOUT=15000
+# Milliseconds of inactivity before entering idle state	(10 minute)
+CONFIG_ZMK_IDLE_TIMEOUT=600000
 
 # Enable deep sleep support	
 CONFIG_ZMK_SLEEP=y
